    - add iconnames when installing custom lists
  * softwarecenter/view/pendingview.py:
    - look for "appname" and "pkgname" (in this order) when showing
      the progress information
  * update about (LP: #566571)
  * merged lp:~apulido/software-center/mago_fix (many thanks to Ara Pulido)
  * data/unbranded-software-center.desktop.in:
    - add unbranded desktop file

 -- Gary Lasker <gary.lasker@canonical.com>  Tue, 18 May 2010 22:04:17 -0400

software-center (2.0.4) lucid-proposed; urgency=low

  * Re-claim used memory after updating an existing AppStore with a 
    new one (LP: #577540), thanks to Olivier Tilloy

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 11 May 2010 23:32:56 +0200

software-center (2.0.3) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * debian/control:
    - updated Vcs-Bzr location to point to lucid branch
  * softwarecenter/apt/aptcache.py:
    - fix flickering when a application is instaleld (LP: #563163)

  [ Olivier Tilloy ]
  * data/templates/AppDetailsView.html:
    - fix missing padding for small details window sizes (LP: #560026)
  * softwarecenter/view/widgets/searchentry.py:
   - Set the search entry's text color to black when not empty.
     This makes it readable on dark themes with a light text color by  
     default (LP: #500174)
  * softwarecenter/app.py:
    - avoid 100% usage when waiting for software-sources to finish
      (LP: #459521)
  * softwarecenter/view/navhistory.py:
    - keep the search terms updated to ensure the navigation history
      always has the latest used search terms (LP: #537512)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Apr 2010 17:55:55 +0200

software-center (2.0.2) lucid; urgency=low

  * softwarecenter/view/appview.py:
    - improve responsiveness of the listview by caching the 
      rendered icons (LP: #556290)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Sun, 18 Apr 2010 13:42:50 +0200

software-center (2.0.1) lucid; urgency=low

  [ Olivier Tilloy ]