@@ -3,7 +3,6 @@
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy project-wide -->
   <object class="GtkWindow" id="window_main">
-    <property name="title" translatable="yes">Ubuntu Software Center</property>
     <property name="window_position">center</property>
     <property name="default_width">870</property>
     <property name="default_height">500</property>
@@ -462,10 +461,9 @@
     <property name="border_width">5</property>
     <property name="type_hint">normal</property>
     <property name="has_separator">False</property>
-    <property name="program_name">Ubuntu Software Center</property>
+    <property name="modal">True</property>
     <property name="version">0.3.4</property>
     <property name="copyright" translatable="yes">&#xA9;2009-2010 Canonical</property>
-    <property name="comments" translatable="yes">Lets you choose from thousands of free applications available for Ubuntu.</property>
     <property name="website">http://launchpad.net/software-center</property>
     <property name="authors">Michael Vogt</property>
     <property name="logo_icon_name">softwarecenter</property>
