@@ -68,6 +68,9 @@ software-center (2.1.0) UNRELEASED; urgency=low
   * merged lp:~apulido/software-center/mago_fix (many thanks to Ara Pulido)
   * data/unbranded-software-center.desktop.in:
     - add unbranded desktop file
+  * softwarecenter/distro/__init__.py:
+    - add new "get_app_name", "get_app_description" methods for easier
+      branding of downstreams
 
  -- Gary Lasker <gary.lasker@canonical.com>  Tue, 18 May 2010 22:04:17 -0400
 
